# Xin

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CURRENT_REVIEW.md  DEPLOYMENT.md  Makefile  PROMPT_STACK.md  README.md  alembic.ini  docker-compose.yml  local.db  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  deploy.yml
Hooshpod-RAG-Chatbot-main/: .env.example  .gitignore  .npmrc  Dockerfile  README.md  RUNBOOK.md  docker-compose.yml  eslint.config.js  knowledge.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
Hooshpod-RAG-Chatbot-main/src/: app.ts  index.ts
Hooshpod-RAG-Chatbot-main/tests/: cache.service.test.js  cache.service.test.ts  chunkText.test.js  chunkText.test.ts  routes.test.js  routes.test.ts  setup-env.js  setup-env.ts
alembic/: README.md  env.py  script.py.mako
alembic/versions/: 0001_initial_placeholder.py  0002_admin_foundations.py  0003_automation_tables.py  __init__.py
config/examples/: .env.docker.example  .env.production.example
deploy/compose/: .env.dev.example  Caddyfile
deploy/nginx/: xin.conf
deploy/observability/: alertmanager.yml  docker-compose.yml  loki-config.yml  prometheus.yml  promtail-config.yml  tempo.yml
deploy/systemd/: README.md  xin-automation-worker.service  xin-channel-gateway.service  xin-ingestion-worker.service  xin-orchestrator.service
docs/: ARCHITECTURE.md  MASTER_PROMPT_XIN_REFACTOR.md  RELEASE_NOTES.md  ROADMAP.md  RUNBOOK.md  hooshpod-parity.md  proposal-fa.html
docs/comms/: status_template.md
docs/delivery/: integrated_plan.md  vps_deploy.md
docs/demos/: phase_walkthroughs.md
docs/deployment/: xinbot_final_runbook.md
docs/frontend/: operator_console.md  widget_sdk.md
docs/perf/: resilience_playbook.md
docs/qa/: README.md  regression_plan.md  release_checklist.md
docs/security/: 2025-11-13-ga-review.md
examples/widget-demo/: index.html
scripts/: demo_onboarding.py  preflight_check.sh  restore_from_backup.sh  smoke_test.sh  verify_prompts.py
scripts/backups/: create_backup.sh
scripts/chaos/: channel_spike.sh  llm_latency.sh  qdrant_throttle.sh  redis_outage.sh
src/chatbot/: cli.py  (+1 more)
(+245 files in other folders)
